--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
             "fontello": "./src/fontello/",
             "fonts": "./src/fonts/",
             "js": "./src/js/",
+            "jsv": "./src/js/src",
             "img": "./src/img/",
             "scss": "./src/scss/"
         },
@@ -51,7 +52,8 @@
     "vars": {
         "siteCssName": "site.combined.min.css",
         "scssName": "site.scss",
-        "cssName": "site.css"
+        "cssName": "site.css",
+        "siteJsName": "site.combined.min.js"
     },
     "globs": {
         "distCss": [
@@ -77,18 +79,29 @@
             {
                 "url": "https://www.google-analytics.com/analytics.js",
                 "dest": "./public/js/"
+            },
+            {
+                "url": "https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js",
+                "dest": "./public/js/"
             }
         ],
         "distJs": [
             "./build/js/*.js"
         ],
+        "fullJs": [
+            "./src/js/src/skip-link-focus-fix.js",
+            "./node_modules/moveto/dist/moveTo.js",
+            "./node_modules/what-input/dist/what-input.js",
+            "./src/js/src/navigation.js",
+            "./src/js/src/scripts.js"
+        ],
         "babelJs": [
-            "./src/js/*.js"
+            "./src/js/src/*.js"
         ],
         "inlineJs": [
             "./node_modules/fontfaceobserver/fontfaceobserver.js",
             "./node_modules/tiny-cookie/tiny-cookie.min.js",
-            "./src/js/asyncload-site-fonts.js"
+            "./src/js/inline/asyncload-site-fonts.js"
         ],
         "siteIcon": "./public/img/site/favicon.*"
     },
@@ -98,13 +111,21 @@
         "hamburgers": "^0.9.1",
         "jeet": "^7.2.0",
         "normalize.css": "^5.0.0",
-        "tiny-cookie": "^1.0.1"
+        "tiny-cookie": "^1.0.1",
+        "moveto": "^1.7.1",
+        "what-input": "^5.0.4"
     },
     "devDependencies": {
         "babel-plugin-transform-runtime": "^6.15.0",
         "babel-preset-es2015": "^6.16.0",
         "chalk": "^1.1.3",
         "critical": "^1.1.0",
+        "eslint": "^4.18.0",
+        "eslint-config-standard": "^11.0.0-beta.0",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-node": "^6.0.0",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-standard": "^3.0.1",
         "fancy-log": "^1.2.0",
         "git-rev-sync": "^1.7.1",
         "gulp": "^3.9.0",
@@ -136,7 +157,8 @@
         "gulp-uglify": "^1.5.4",
         "moment": "^2.14.1",
         "pa11y": "^4.11.0",
-        "vinyl-source-stream": "^1.1.0"
+        "vinyl-source-stream": "^1.1.0",
+        "gulp-util": "^3.0.8"
     },
     "scripts": {
         "start": "gulp",
